# pancake-mcp-server

./: .dockerignore  .env.example  .gitattributes  CLAUDE.md  Dockerfile  Dockerfile.optimized  README.md  check_system.sh  create_claude_config.sh  docker-compose.prod.yml  docker-compose.yml  fix_claude_config.sh  install.bat  install.sh  pip.conf  pyproject.toml  pyproject.toml.bk  restart_after_reboot.sh  start.sh  stop.sh  user_guide.md
.claude/agent-memory/code-reviewer/: MEMORY.md
.github/workflows/: docker-build-windows.yml
cowork_mcp/plans/260228-0939-pancake-mcp-server/reports/: code-reviewer-260228-1335-pancake-mcp-server-review.md  project-manager-260228-1344-finalization.md
docs/: docker-volume-mounting-guide.md  handling-pypi-timeouts.md  plan-auto-discover-page-id.md  user-guide.md
plans/260302-1400-enhanced-download-attachment-support/: implementation-summary.md  plan.md
src/pancake_mcp/: __init__.py  chat_client.py  client.py  deps.py  server.py
src/pancake_mcp/tools/: __init__.py  attachments.py  common.py  conversations.py  inventory.py  orders.py  shipping.py  shop.py
tests/: test_client.py  test_server.py
