[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pancake-mcp-server"
version = "0.1.0"
description = "Remote MCP server integrating Claude with Pancake POS API"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "easyocr>=1.7.2",
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "respx>=0.22.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pancake_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
pancake-mcp       = "pancake_mcp.server:main"
pancake-mcp-stdio = "pancake_mcp.server:main_stdio"
